QSF - Candidate Referral/src/objects/QSF_RFL_Position__c.object
<CustomObject>
    <fields>
        <fullName>Budget__c</fullName>
        <description>The budget assigned for the open position</description>
        <label>Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City office where the employee will be based</description>
        <label>City</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <defaultValue>Today() + 90</defaultValue>
        <description>Deadline for the hiring to be effective. Notifications will be sent to hiring managers one week before the deadline if the position is not fulfilled.</description>
        <label>Deadline</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager the headcount belongs to</description>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Managed_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Referral_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Referral Fee</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the recruitment process</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Budget__c</columns>
        <columns>City__c</columns>
        <columns>Geography__c</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Referral_Fee__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>QSF_RFL_Open_Positions</fullName>
        <columns>NAME</columns>
        <columns>Budget__c</columns>
        <columns>City__c</columns>
        <columns>Deadline__c</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Referral_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Positions</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QSF_RFL_HiringManagerNotEmpty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Hiring_Manager__c) || ISNULL(Hiring_Manager__c)</errorConditionFormula>
        <errorDisplayField>Hiring_Manager__c</errorDisplayField>
        <errorMessage>You must provide a hiring manager</errorMessage>
    </validationRules>
</CustomObject>